# dofus-stuff-machine

./: .gitignore  GUIDE_WIZARD.md  README.md  fetcher.py  pyproject.toml
dofus_stuff/: __init__.py  __main__.py  api.py  catalog.py  cli.py  database.py  sync.py
dofus_stuff/model/: __init__.py  build.py  character.py  conditions.py  set_bonus_limits.py  slots.py  solver_spec.py  stats.py
dofus_stuff/optimize/: __init__.py  api.py  candidates.py  cpsat.py  greedy.py  profile_input.py  score.py
dofus_stuff/web/: __init__.py  __main__.py  dofusbook_export.py  optimize_wizard.py  routes.py  screens.py
dofus_stuff/web/static/css/: terminal.css
dofus_stuff/web/static/js/: terminal.js
dofus_stuff/web/templates/: screen.html
tests/: conftest.py  test_optimize.py  test_profile_input.py  test_screens.py  test_solver_spec.py  test_web.py
